--- a/Resources/Maps/_Mono/POI/pdvhelios.yml
+++ b/Resources/Maps/_Mono/POI/pdvhelios.yml
@@ -4,8 +4,8 @@ meta:
   engineVersion: 264.0.0
   forkId: ""
   forkVersion: ""
-  time: 12/20/2025 13:55:45
-  entityCount: 8377
+  time: 01/03/2026 10:58:15
+  entityCount: 8376
 maps: []
 grids:
 - 1
@@ -2095,6 +2095,11 @@ entities:
           decals:
             3312: 8,86
         - node:
+            color: '#855395FF'
+            id: DeliveryGreyscale
+          decals:
+            3418: -4,41
+        - node:
             cleanable: True
             color: '#FFFFFFFF'
             id: FlowersBROne
@@ -3424,6 +3429,7 @@ entities:
             3361: -4,36
             3393: -17,30
             3394: -17,29
+            3417: -3,41
         - node:
             color: '#FFFFFFFF'
             id: TechN
@@ -3818,6 +3824,7 @@ entities:
             3141: 38,32
             3280: 9,27
             3281: 9,30
+            3416: -3,40
         - node:
             color: '#FFFFFFFF'
             id: TechSW
@@ -10405,13 +10412,6 @@ entities:
     components:
     - type: Transform
       pos: 0.5,66.5
-      parent: 1
-- proto: BorgCharger
-  entities:
-  - uid: 17610
-    components:
-    - type: Transform
-      pos: -16.5,30.5
       parent: 1
 - proto: BoxBeaker
   entities:
@@ -24235,15 +24235,6 @@ entities:
     - type: Transform
       pos: 15.573562,14.732298
       parent: 1
-- proto: ClothingBeltSheathFilledNavy
-  entities:
-  - uid: 3993
-    components:
-    - type: Transform
-      parent: 2371
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
 - proto: ClothingMaskBreathMedicalSecurity
   entities:
   - uid: 1676
@@ -42169,45 +42160,6 @@ entities:
       parent: 1
 - proto: LockerSteel
   entities:
-  - uid: 2371
-    components:
-    - type: Transform
-      pos: 7.5,41.5
-      parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.14923
-        moles:
-        - 1.7459903
-        - 6.568249
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-    - type: ContainerContainer
-      containers:
-        entity_storage: !type:Container
-          showEnts: False
-          occludes: True
-          ents:
-          - 3993
-          - 7576
-        paper_label: !type:ContainerSlot
-          showEnts: False
-          occludes: True
-          ent: null
   - uid: 4453
     components:
     - type: Transform
@@ -42247,6 +42199,13 @@ entities:
     components:
     - type: Transform
       pos: 16.5,29.5
+      parent: 1
+- proto: LockerVizier
+  entities:
+  - uid: 2371
+    components:
+    - type: Transform
+      pos: 7.5,41.5
       parent: 1
 - proto: LockerWeldingSuppliesFilled
   entities:
@@ -42399,6 +42358,13 @@ entities:
     components:
     - type: Transform
       pos: 8.5,16.5
+      parent: 1
+- proto: NFHolopadShip
+  entities:
+  - uid: 3993
+    components:
+    - type: Transform
+      pos: -3.5,41.5
       parent: 1
 - proto: NFWardrobePrisonFilled
   entities:
@@ -45214,13 +45180,6 @@ entities:
     components:
     - type: Transform
       pos: -10.5,16.5
-      parent: 1
-- proto: SpawnPointPDVBorg
-  entities:
-  - uid: 17620
-    components:
-    - type: Transform
-      pos: -15.5,28.5
       parent: 1
 - proto: SpawnPointPDVDenasvar
   entities:
@@ -53912,15 +53871,6 @@ entities:
     - type: Transform
       pos: -4.5,-1.5
       parent: 1
-- proto: WeaponPistolHawk4
-  entities:
-  - uid: 7576
-    components:
-    - type: Transform
-      parent: 2371
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
 - proto: WeaponTurretHades
   entities:
   - uid: 4363
