--- a/Resources/Prototypes/_Mono/Entities/Objects/Devices/ship_vouchers.yml
+++ b/Resources/Prototypes/_Mono/Entities/Objects/Devices/ship_vouchers.yml
@@ -27,7 +27,7 @@
     consoleType: USSP
     companyName: USSP
     vessels:
-    - Gadyuka
+    - Svinya
     - Gruznyk
     - Natisk
     - Strayk
