--- a/Resources/Prototypes/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/Voice/speech_emotes.yml
@@ -25,6 +25,17 @@
     - yells
     - yelled
     - yelling
+    # RU-Localization-Start
+    - кричит
+    - кричит.
+    - кричит!
+    - орёт
+    - орёт.
+    - орёт!
+    - визжит
+    - визжит.
+    - визжит!
+    # RU-Localization-End
 
 - type: emote
   id: Laugh
@@ -52,6 +63,17 @@
     - chortles
     - chortling
     - chortled # Frontier
+    # RU-Localization-Start
+    - смеется
+    - смеётся
+    - смеются
+    - хохочет
+    - хихикает
+    - хихикнул
+    - хихикнула
+    - хихикнуло
+    - ржёт
+    # RU-Localization-End
 
 - type: emote
   id: Honk
@@ -69,6 +91,9 @@
     - honks
     - honked
     - honking
+    # RU-Localization-Start
+    - хонк
+    # RU-Localization-End
 
 - type: emote
   id: Sigh
@@ -87,6 +112,13 @@
     - sighs
     - sighed
     - sighing # Frontier
+    # RU-Localization-Start
+    - вздыхает
+    - вздохнул
+    - вздохнула
+    - вздохнуло
+    - вздохнули
+    # RU-Localization-End
 
 - type: emote
   id: Whistle
@@ -105,6 +137,13 @@
     - whistles
     - whistleblowing
     - whistled # Frontier
+    # RU-Localization-Start
+    - свистит
+    - свистнул
+    - свистнула
+    - свистнуло
+    - свистнули
+    # RU-Localization-End
 
 - type: emote
   id: Crying
@@ -127,6 +166,12 @@
     - sobbing
     - sobbed # Frontier
     - cried # Frontier
+    # RU-Localization-Start
+    - плачет
+    - рыдает
+    - хнычет
+    - хнычут
+    # RU-Localization-End
 
 - type: emote
   id: Squish
@@ -146,6 +191,10 @@
     - squishing
     - squishes
     - squished # Frontier
+    # RU-Localization-Start
+    - хлюпает
+    - хлюпают
+    # RU-Localization-End
 
 - type: emote
   id: Chitter
@@ -165,6 +214,10 @@
    - chitters
    - chittered
    - chittering # Frontier
+   # RU-Localization-Start
+   - стрекочет
+   - стрекочут
+   # RU-Localization-End
 
 - type: emote
   id: Squeak
@@ -184,6 +237,10 @@
    - squeaks
    - squeaked
    - squeaking # Frontier
+   # RU-Localization-Start
+   - пищит
+   - пищат
+   # RU-Localization-End
 
 - type: emote
   id: Click
@@ -203,6 +260,10 @@
    - clicks
    - clicked # Frontier
    - clicking # Frontier
+   # RU-Localization-Start
+   - кликает
+   - кликают
+   # RU-Localization-End
 
 # hand emotes
 - type: emote
@@ -221,6 +282,19 @@
     - claps
     - clapping
     - clapped
+    # RU-Localization-Start
+    - хлопает
+    - хлопнул
+    - хлопнула
+    - хлопнули
+    - хлопает в ладоши
+    - хлопнул в ладоши
+    - хлопнула в ладоши
+    - хлопнуло в ладоши
+    - хлопнули в ладоши
+    - апплодирует
+    - апплодируют
+    # RU-Localization-End
 
 - type: emote
   id: ClapSingle
@@ -266,6 +340,28 @@
     - snaps its fingers
     - snapping fingers
     - snapped fingers
+    # RU-Localization-Start
+    - щелкает
+    - щелкнул
+    - щелкнула
+    - щелкнуло
+    - щелкнули
+    - щёлкает
+    - щёлкнул
+    - щёлкнула
+    - щёлкнуло
+    - щёлкнули
+    - щелкает пальцами
+    - щелкнул пальцами
+    - щелкнула пальцами
+    - щелкнуло пальцами
+    - щелкнули пальцами
+    - щёлкает пальцами
+    - щёлкнул пальцами
+    - щёлкнула пальцами
+    - щёлкнуло пальцами
+    - щёлкнули пальцами
+    # RU-Localization-End
 
 - type: emote
   id: Thump
@@ -291,6 +387,18 @@
     - thumps her tail
     - thumps his tail
     - thumps its tail
+    # RU-Localization-Start
+    - стучит хвостом
+    - стучат хвостом
+    - стукнул хвостом
+    - стукнула хвостом
+    - стукнуло хвостом
+    - стукнули хвостом
+    - стукнул своим хвостом
+    - стукнула своим хвостом
+    - стукнуло своим хвостом
+    - стукнули своим хвостом
+    # RU-Localization-End
 
 - type: emote
   id: Salute
@@ -309,6 +417,16 @@
     - salutes
     - saluted # Frontier
     - saluting # Frontier
+    # RU-Localization-Start
+    - салютует
+    - салютуют
+    - отдаёт честь
+    - отдают честь
+    - отдал честь
+    - отдала честь
+    - отдало честь
+    - отдали честь
+    # RU-Localization-End
 
 - type: emote
   id: Gasp
@@ -322,6 +440,10 @@
    - gasps
    - gasped
    - gasping # Frontier
+   # RU-Localization-Start
+   - задыхается
+   - задыхаются
+   # RU-Localization-End
 
 - type: emote
   id: DefaultDeathgasp
@@ -337,6 +459,10 @@
   chatMessages: ["chat-emote-msg-deathgasp"]
   chatTriggers: # Mono - D-V ready for some more 1984 - Readds deathgasp
     - deathgasp
+    # RU-Localization-Start
+    - умирает
+    - умирают
+    # RU-Localization-End
 
 - type: emote
   id: MonkeyDeathgasp
@@ -355,6 +481,14 @@
     - buzz
     - buzzed
     - buzzes
+    # RU-Localization-Start
+    - жужжит
+    - жужжат
+    - зажужжал
+    - зажужжала
+    - зажжужало
+    - зажжужали
+    # RU-Localization-End
 
 - type: emote
   id: Weh
@@ -371,6 +505,11 @@
   chatTriggers: # Floof - you can weh now
     - weh
     - wehs
+    # RU-Localization-Start
+    - вехает
+    - вехают
+    - вех
+    # RU-Localization-End
 
 - type: emote
   id: Hew
@@ -398,6 +537,10 @@
     - chirps
     - chirped
     - chirping
+    # RU-Localization-Start
+    - чирикает
+    - чирикают
+    # RU-Localization-End
 
 # Machine Emotes
 - type: emote
@@ -415,6 +558,11 @@
     - beeps
     - beeped
     - beeping
+    # RU-Localization-Start
+    - бип
+    - бипает
+    - бипают
+    # RU-Localization-End
 
 - type: emote
   id: Chime
@@ -431,6 +579,11 @@
     - chimes
     - chimed
     - chiming
+    # RU-Localization-Start
+    - дзынь
+    - дзынькает
+    - дзынькают
+    # RU-Localization-End
 
 - type: emote
   id: Buzz-Two
@@ -454,6 +607,14 @@
     - buzzing twice
     - buzzed twice
     - buzzedtwice # Frontier
+    # RU-Localization-Start
+    - бипбуп
+    - бип буп
+    - бип-буп
+    - бипбип
+    - бип бип
+    - бип-бип
+    # RU-Localization-End
 
 - type: emote
   id: Ping
@@ -470,3 +631,6 @@
     - pings
     - pinged
     - pinging
+    # RU-Localization-Start
+    - пинг
+    # RU-Localization-End
