--- a/Resources/Prototypes/_DV/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/_DV/Voice/speech_emotes.yml
@@ -10,12 +10,15 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [honks.]
+  chatMessages: ["chat-emote-msg-honk"] # RU-Localization-Start
   chatTriggers:
     - honk
     - honks
     - honking
     - honked
+    # RU-Localization-Start
+    - хонк
+    # RU-Localization-End
 
 - type: emote
   id: HarpyRing
@@ -28,13 +31,16 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [rings.]
+  chatMessages: ["chat-emote-msg-ring"] # RU-Localization-Start
   chatTriggers:
     - ring
     - rings
     - ringing
     - ringed
     - rang
+    # RU-Localization-Start
+    - звонит
+    # RU-Localization-End
 
 - type: emote
   id: HarpyPew
@@ -47,11 +53,14 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [pews.]
+  chatMessages: ["chat-emote-msg-pew"] # RU-Localization-Start
   chatTriggers:
     - pew
     - pews
     - pewpew
+    # RU-Localization-Start
+    - пиу
+    # RU-Localization-End
 
 - type: emote
   id: HarpyBang
@@ -64,12 +73,16 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [bangs.]
+  chatMessages: ["chat-emote-msg-bang"] # RU-Localization-Start
   chatTriggers:
     - bang
     - bangs
     - banging
     - banged
+    # RU-Localization-Start
+    - пау
+    - паф
+    # RU-Localization-End
 
 - type: emote
   id: HarpyBeep
@@ -82,12 +95,17 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [beeps.]
+  chatMessages: ["chat-emote-msg-beep"] # RU-Localization-Start
   chatTriggers:
     - beep
     - beeps
     - beeping
     - beeped
+    # RU-Localization-Start
+    - бип
+    - бипает
+    - бипают
+    # RU-Localization-End
 
 - type: emote
   id: HarpyRev
@@ -100,12 +118,16 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [revs.]
+  chatMessages: ["chat-emote-msg-rev"] # RU-Localization-Start
   chatTriggers:
     - rev
     - revs
     - revving
     - revved
+    # RU-Localization-Start
+    - вжикает
+    - вжикают
+    # RU-Localization-End
 
 - type: emote
   id: HarpyCaw
@@ -118,12 +140,16 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [caws.]
+  chatMessages: ["chat-emote-msg-caw"] # RU-Localization-Start
   chatTriggers:
     - caw
     - caws
     - cawing
     - cawed
+    # RU-Localization-Start
+    - каркает
+    - каркают
+    # RU-Localization-End
 
 #Vulpkanin
 - type: emote
@@ -137,12 +163,17 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [barks.]
+  chatMessages: ["chat-emote-msg-bark"] # RU-Localization-Start
   chatTriggers:
     - bark
     - barks
     - barked
     - barking
+    # RU-Localization-Start
+    - гавкает
+    - гавкают
+    # RU-Localization-End
+
 
 - type: emote
   id: Snarl
@@ -155,12 +186,16 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [snarls.]
+  chatMessages: ["chat-emote-msg-snarl"] # RU-Localization-Start
   chatTriggers:
     - snarl
     - snarls
     - snarled
     - snarling
+    # RU-Localization-Start
+    - рычит
+    - рычат
+    # RU-Localization-End
 
 - type: emote
   id: Whine
@@ -173,7 +208,7 @@
   blacklist:
     components:
     - BorgChassis
-  chatMessages: [whines.]
+  chatMessages: ["chat-emote-msg-whine"] # RU-Localization-Start
   chatTriggers:
     - whine
     - whines
