Pr title case action is annoying

--- a/.github/workflows/prtitlecase.yml
+++ b/.github/workflows/prtitlecase.yml
@@ -10,6 +10,7 @@ env:
 jobs:
   prtitlecase:
     runs-on: ubuntu-latest
+    if: ${{ secrets.BOT_TOKEN != '' }}
     steps:
       - name: Checkout Master
         uses: actions/checkout@v3
