--- a/Resources/Prototypes/_DV/Detasets/Names/chitinid_first_male.yml
+++ b/Resources/Prototypes/_DV/Detasets/Names/chitinid_first_male.yml
@@ -1,36 +1,38 @@
 - type: dataset
   id: NamesChitinidFirstMale
   values:
-  - Al'vos
-  - Amue'val
-  - Barma'tos
-  - Ben'idar
-  - Bil'verrok
-  - Crik'xis
-  - Daru'nta
-  - Dee'aldas 
-  - Drx'var
-  - Hen'sra
-  - Hux'von
-  - Ilv'imon
-  - Is'irax
-  - Ish'nax
-  - Jax'zaril'va
-  - L'ofa
-  - Lo'zok
-  - Lu'vurx
-  - Luc'irax 
-  - Mer'tex
-  - Od'dalis
-  - Si'ley
-  - Sim'sker
-  - Tal'vos
-  - Ti'ril
-  - Vir'lker
-  - Vir'muel
-  - Vix'vol
-  - Von'draz
-  - Vu'lta'voss
-  - Xixa'ba
-  - Yarr'wat
-  - Zay'zz
+  # Ru-Locale-Start
+  - Ал'вос
+  - Амуэ'вал
+  - Барма'тос
+  - Бен'идар
+  - Бил'веррок
+  - Крик'ксис
+  - Дару'нта
+  - Ди'алдас
+  - Дркс'вар
+  - Хен'сра
+  - Хукс'вон
+  - Илв'имон
+  - Ис'иракс
+  - Иш'накс
+  - Джакс'зарил'ва
+  - Л'офа
+  - Ло'зок
+  - Лу'вуркс
+  - Лук'иракс
+  - Мер'текс
+  - Од'далис
+  - Си'лей
+  - Сим'скер
+  - Тал'вос
+  - Ти'рил
+  - Вир'лкер
+  - Вир'муэл
+  - Викс'вол
+  - Вон'драз
+  - Ву'лта'восс
+  - Ксикса'ба
+  - Ярр'ват
+  - Зей'зз
+  # Ru-Locale-End
