--- a/Resources/Prototypes/_DV/Detasets/Names/rodentia_female.yml
+++ b/Resources/Prototypes/_DV/Detasets/Names/rodentia_female.yml
@@ -2,168 +2,170 @@
   id: names_rodentia_female
   values:
   # generic names
-  - Squeaks
-  - Squeaker
-  - Nibbles
-  - Pebbles
-  - Peanut
-  - Pinky
-  - Gadget
-  - Scurry
-  - Scamper
-  - Chitters
-  - Quill
-  - Whiskers
-  - Wiggles
-  - Button
-  - Sniffles
-  - Chip
-  - Pipsqueak
-  - Nugget
-  - Comet
-  - Dash
-  - Fudge
-  - Noodle
-  - Spud
-  - Muffin
-  - Sprout
-  - Jelly
-  - Fuzz
-  - Cheddar
-  - Tootsie
-  - Pickle
-  - Berry
- 
+  # Ru-Locale-Start
+  - Сквикс
+  - Сквикер
+  - Ниблз
+  - Пеблз
+  - Пинат
+  - Пинки
+  - Гаджит
+  - Скарри
+  - Скампер
+  - Читтерс
+  - Квил
+  - Вискерс
+  - Виглз
+  - Баттон
+  - Снифлз
+  - Чип
+  - Пипсквик
+  - Нагжит
+  - Комет
+  - Дэш
+  - Фадж
+  - Нудл
+  - Спад
+  - Маффин
+  - Спраут
+  - Джелли
+  - Фазз
+  - Чеддар
+  - Тутси
+  - Пикл
+  - Берри
+
   # gender-neutral
-  - Alex
-  - Riley
-  - Taylor
-  - Jordan
-  - Casey
-  - Avery
-  - Morgan
-  - Jamie
-  - Quinn
-  - Charlie
-  - Dakota
-  - Sydney
-  - Parker
-  - Cameron
-  - Finley
-  - Robin
-  - Emery
-  - Kendall
-  - Rowan
-  - Sawyer
-  - Bailey
-  - Jaden
-  - Addison
-  - Logan
-  - Devon
-  - Lane
-  - Blair
-  - Drew
-  - Jesse
-  - Skylar
-  - Sam
-  - Reese
-  - Terry
-  - Marley
-  - Elliot
-  - Harper
-  - Jules
-  - Ren
-  - Sloane
-  - Rylan
-  - Sage
-  
+  - Алекс
+  - Райли
+  - Тейлор
+  - Джордан
+  - Кейси
+  - Эйвери
+  - Морган
+  - Джейми
+  - Куинн
+  - Чарли
+  - Дакота
+  - Сидни
+  - Паркер
+  - Кэмерон
+  - Финли
+  - Робин
+  - Эмери
+  - Кендалл
+  - Роуэн
+  - Сойер
+  - Бейли
+  - Джейден
+  - Эддисон
+  - Логан
+  - Девон
+  - Лейн
+  - Блэр
+  - Дрю
+  - Джесси
+  - Скайлар
+  - Сэм
+  - Рис
+  - Терри
+  - Марли
+  - Эллиот
+  - Харпер
+  - Джулс
+  - Рен
+  - Слоун
+  - Райлан
+  - Сейдж
+
   # feminine names
-  - Minnie
-  - Daisy
-  - Bella
-  - Luna
-  - Rosie
-  - Mia
-  - Lily
-  - Chloe
-  - Sophie
-  - Ruby
-  - Zoe
-  - Abby
-  - Ella
-  - Molly
-  - Lucy
-  - Nala
-  - Poppy
-  - Grace
-  - Ivy
-  - Hazel
-  - Emma
-  - Phoebe
-  - Willow
-  - Tilly
-  - Annie
-  - Alice
-  - Holly
-  - Olive
-  - Zoey
-  - Lila
-  - Pippa
-  - June
-  - Mabel
-  - Nellie
-  - Polly
-  - Sadie
-  - Isla
+  - Минни
+  - Дейзи
+  - Белла
+  - Луна
+  - Рози
+  - Миа
+  - Лили
+  - Хлоя
+  - Софи
+  - Руби
+  - Зои
+  - Эбби
+  - Элла
+  - Молли
+  - Люси
+  - Нала
+  - Поппи
+  - Грейс
+  - Айви
+  - Хейзел
+  - Эмма
+  - Фиби
+  - Уиллоу
+  - Тили
+  - Энни
+  - Элис
+  - Холли
+  - Олив
+  - Зои
+  - Лайла
+  - Пиппа
+  - Джун
+  - Мейбл
+  - Нелли
+  - Полли
+  - Сейди
+  - Айла
 
   # "surnames"
-  - Bramblewood
-  - Burrows
-  - Burrowsford
-  - Cheesetail
-  - Cloverfield
-  - Cloverwood
-  - Ferncroft
-  - Flopshire
-  - Flopshire
-  - Fluffbottom
-  - Furrington
-  - Furwell
-  - Furwood
-  - Gnawson
-  - Linden
-  - Little
-  - Maplewood
-  - Meadows
-  - Munchford
-  - Nibblesnout
-  - Nibbleston
-  - Nibblewood
-  - Oakcroft
-  - Oakley
-  - Pawsbrook
-  - Pawsford
-  - Pawsley
-  - Pawswell
-  - Pawsworth
-  - Scamperdale
-  - Scamperford
-  - Scamperley
-  - Scamperwood
-  - Scurryfoot
-  - Scuttleby
-  - Skitters
-  - Stilton
-  - Squeakerton
-  - Squeakson
-  - Squeaktooth
-  - Squeakwell
-  - Squeakwood
-  - Tailsbury
-  - Thumperton
-  - Thumpford
-  - Whiskerby
-  - Whiskerfield
-  - Whiskershire
-  - Whiskersnout
-  - Whiskervale
+  - Брэмблвуд
+  - Барроуз
+  - Барроуcфорд
+  - Чизтейл
+  - Кловерфилд
+  - Кловервуд
+  - Фернкрофт
+  - Флопшир
+  - Флопшир
+  - Флаффботтом
+  - Феррингтон
+  - Фервелл
+  - Фервуд
+  - Носон
+  - Линден
+  - Литтл
+  - Мейплвуд
+  - Мэдоуз
+  - Манчфорд
+  - Ниблсноут
+  - Ниблстон
+  - Ниблвуд
+  - Оуккрофт
+  - Окли
+  - Позбрук
+  - Позфорд
+  - Позли
+  - Позвелл
+  - Позуорт
+  - Скампердейл
+  - Скамперфорд
+  - Скамперли
+  - Скампервуд
+  - Скаррифут
+  - Скаттлби
+  - Скиттерс
+  - Стилтон
+  - Сквикертон
+  - Сквиксон
+  - Сквиктус
+  - Сквиквелл
+  - Сквиквуд
+  - Тейлсбери
+  - Сампертон
+  - Сампфорд
+  - Вискерби
+  - Вискерфилд
+  - Вискершир
+  - Вискерсноут
+  - Вискервейл
+  # Ru-Locale-End
