--- a/Resources/Prototypes/_DV/Detasets/Names/rodentia_last.yml
+++ b/Resources/Prototypes/_DV/Detasets/Names/rodentia_last.yml
@@ -3,6 +3,7 @@
 - type: dataset
   id: names_rodentia_last
   values:
+  # Ru-Locale-Start
   - Agile
   - Beady-eyed
   - Berry-picking
@@ -53,7 +54,7 @@
   - Quick-wits
   - Quiet
   - Ravenous
-  - Ravenous 
+  - Ravenous
   - Restless
   - Rough
   - Round-belly
@@ -90,3 +91,4 @@
   - Trash-eating
   - Tunnel-building
   - Whisker-twitching
+  # Ru-Locale-End
