--- a/Resources/Prototypes/_Floofstation/Datasets/Names/resomi_female.yml
+++ b/Resources/Prototypes/_Floofstation/Datasets/Names/resomi_female.yml
@@ -1,53 +1,55 @@
 - type: dataset
   id: names_resomi_female
   values:
-  - Ealia
-  - Shirema
-  - Nathani
-  - Ralise
-  - Leesche
-  - Rianea
-  - Niescha
-  - Elime
-  - Nasira
-  - Taschene
-  - Melira
-  - Relea
-  - Shilima
-  - Niaresa
-  - Lirica
-  - Shirele
-  - Calea
-  - Mesira
-  - Canira
-  - Leshane
-  - Eanira
-  - Taschale
-  - Ralima
-  - Shilera
-  - Nielise
-  - Eshani
-  - Lishaca
-  - Reenira
-  - Shianea
-  - Melise
-  - Tishina
-  - Ralene
-  - Shireta
-  - Nacira
-  - Eashira
-  - Lianese
-  - Melea
-  - Shilase
-  - Nialima
-  - Eshaca
-  - Tashira
-  - Meliana
-  - Ralise
-  - Shilene
-  - Nacima
-  - Canese
-  - Lishira
-  - Raleca
-  - Shirema
-  - Nialea
+  # Ru-Locale-Start
+  - Эалия
+  - Ширема
+  - Натани
+  - Ралис
+  - Лише
+  - Рианеа
+  - Ниеша
+  - Элим
+  - Насира
+  - Ташене
+  - Мелира
+  - Релеа
+  - Шилима
+  - Ниареса
+  - Лирика
+  - Ширеле
+  - Калеа
+  - Месира
+  - Канира
+  - Лешан
+  - Эанира
+  - Ташале
+  - Ралима
+  - Шилера
+  - Ниелис
+  - Эшани
+  - Лишака
+  - Ренира
+  - Шианеа
+  - Мелис
+  - Тишина
+  - Рален
+  - Ширета
+  - Насира
+  - Эашира
+  - Лианес
+  - Мелеа
+  - Шилас
+  - Ниалима
+  - Эшака
+  - Ташира
+  - Мелиана
+  - Ралис
+  - Шилен
+  - Нацима
+  - Канес
+  - Лишира
+  - Ралека
+  - Ширема
+  - Ниалеа
+  # Ru-Locale-End
