--- a/Resources/Prototypes/_Floofstation/Datasets/Names/resomi_male.yml
+++ b/Resources/Prototypes/_Floofstation/Datasets/Names/resomi_male.yml
@@ -1,53 +1,55 @@
 - type: dataset
   id: names_resomi_male
   values:
-  - Tevan
-  - Nialor
-  - Marik
-  - Auaris
-  - Ischat
-  - Laton
-  - Memar
-  - Minax
-  - Aenir
-  - Ceiran
-  - Aitor
-  - Sisan
-  - Tevar
-  - Nialen
-  - Maris
-  - Aurok
-  - Ischar
-  - Latim
-  - Merek
-  - Minar
-  - Aenin
-  - Ceitan
-  - Aisen
-  - Sitar
-  - Tevik
-  - Nialus
-  - Marion
-  - Auric
-  - Ischen
-  - Latir
-  - Menar
-  - Minet
-  - Aenor
-  - Ceilon
-  - Aider
-  - Sisar
-  - Tevon
-  - Nialum
-  - Marik
-  - Aurar
-  - Ischam
-  - Latir
-  - Menis
-  - Minok
-  - Aenim
-  - Ceiran
-  - Aithar
-  - Sinar
-  - Tevor
-  - Nialom
+  # Ru-Locale-Start
+  - Теван
+  - Ниалор
+  - Марик
+  - Ауарис
+  - Искат
+  - Латон
+  - Мемар
+  - Минакс
+  - Аенир
+  - Кейран
+  - Айтор
+  - Сисан
+  - Тевар
+  - Ниален
+  - Марис
+  - Аурок
+  - Исхар
+  - Латим
+  - Мерек
+  - Минар
+  - Аенин
+  - Кейтан
+  - Айсен
+  - Ситар
+  - Тевик
+  - Ниалус
+  - Марион
+  - Аурик
+  - Ишен
+  - Латир
+  - Менар
+  - Минет
+  - Аенор
+  - Кейлон
+  - Айдер
+  - Сисар
+  - Тевон
+  - Ниалум
+  - Марик
+  - Аурар
+  - Ишам
+  - Латир
+  - Менис
+  - Минок
+  - Аеним
+  - Кейран
+  - Айтхар
+  - Синар
+  - Тевор
+  - Ниалом
+  # Ru-Locale-End
