--- a/Resources/Prototypes/_Goobstation/Datasets/Names/yowie_female.yml
+++ b/Resources/Prototypes/_Goobstation/Datasets/Names/yowie_female.yml
@@ -1,38 +1,40 @@
 - type: dataset
   id: names_yowie_female
   values:
-  - Bindi
-  - Jedda
-  - Kylie
-  - Keria
-  - Mia
-  - Allira
-  - Arika
-  - Cardinia
-  - Jannali
-  - Kareela
-  - Karri
-  - Lenah
-  - Marlee
-  - Marchooy
-  - Medika
-  - Merri
-  - Myaree
-  - Rianna
-  - Tahnee
-  - Talia
-  - Yindi
-  - Alinta
-  - Anmanari
-  - Darana
-  - Ellin
-  - Inala
-  - Kalina
-  - Killara
-  - Kirra
-  - Lowanna
-  - Merindah
-  - Allora
-  - Brindabella
-  - Elanora
-  - Maya
+  # Ru-Locale-Start
+  - Бинди
+  - Джедда
+  - Кайли
+  - Керия
+  - Миа
+  - Аллира
+  - Арика
+  - Кардиния
+  - Дженнали
+  - Кареэла
+  - Карри
+  - Ленах
+  - Марли
+  - Марчуй
+  - Медика
+  - Мерри
+  - Майари
+  - Рианна
+  - Танни
+  - Талия
+  - Йинди
+  - Алинта
+  - Анманари
+  - Дарана
+  - Эллин
+  - Инала
+  - Калина
+  - Киллара
+  - Кирра
+  - Лованна
+  - Меринда
+  - Аллора
+  - Бриндабелла
+  - Эланора
+  - Майя
+  # Ru-Locale-End
