--- a/Resources/Prototypes/_Goobstation/Datasets/Names/yowie_male.yml
+++ b/Resources/Prototypes/_Goobstation/Datasets/Names/yowie_male.yml
@@ -1,46 +1,48 @@
 - type: dataset
   id: names_yowie_male
   values:
-  - Coen
-  - Koa
-  - Balun
-  - Birrani
-  - Callagun
-  - Daku
-  - Dural
-  - Djalu
-  - Gonnagulla
-  - Gurumarra
-  - Jarli
-  - Kuparr
-  - Mandawuy
-  - Monti
-  - Nullah
-  - Omeo
-  - Tau
-  - Tidam
-  - Warragul
-  - Warrin
-  - Yarramundi
-  - Yarran
-  - Allambee
-  - Banjo
-  - Bouddi
-  - Jandamarra
-  - Jiemba
-  - Miro
-  - Ngarra
-  - Waru
-  - Illuka
-  - Jarrah
-  - Lue
-  - Minjarra
-  - Monaro
-  - Yannathan
-  - Alkawaro
-  - Angoona
-  - Antakari
-  - Bambam
-  - Djarrtjuntjun
-  - Mangana
-  - Pipipa
+  # Ru-Locale-Start
+  - Коэн
+  - Коа
+  - Балун
+  - Биррани
+  - Каллаган
+  - Даку
+  - Дурал
+  - Джалу
+  - Гоннагулла
+  - Гурумарра
+  - Джари
+  - Купарр
+  - Мандавуй
+  - Монти
+  - Нуллах
+  - Омео
+  - Тау
+  - Тидам
+  - Варрагул
+  - Варрин
+  - Яррамунди
+  - Ярран
+  - Алламби
+  - Банджо
+  - Боудди
+  - Джандамарра
+  - Джимба
+  - Миро
+  - Нгарра
+  - Вару
+  - Иллука
+  - Джарах
+  - Лю
+  - Минджара
+  - Монаро
+  - Яннатхан
+  - Алкаваро
+  - Ангуна
+  - Антакари
+  - Бамбам
+  - Джарртджунтджун
+  - Мангана
+  - Пипипа
+  # Ru-Locale-End
