fix from review
Co-authored-by: cfif126 <94059374+cfif126@users.noreply.github.com>

--- a/Resources/Prototypes/_DV/Detasets/Names/chitinid_first_female.yml
+++ b/Resources/Prototypes/_DV/Detasets/Names/chitinid_first_female.yml
@@ -17,7 +17,7 @@
   - Ир'иска
   - Иш'кар
   - Иша'ба
-  - Джес'сри'ка
+  - Джес'шри'ка
   - Калз'за
   - Каз'зек
   - Лот'тикс
@@ -26,7 +26,7 @@
   - Талзз'арк
   - Тесс'ара
   - Тез'мал'зар
-  - Сри'кис
+  - Шри'кис
   - Вани'си'кар
   - Ве'рай
   - Виш'ра
