--- a/Resources/Prototypes/_Mono/Datasets/Names/ads.yml
+++ b/Resources/Prototypes/_Mono/Datasets/Names/ads.yml
@@ -32,7 +32,7 @@
   - Ледяной
   - Расплавленный
   - Летучий
-  - Марширующий
+  - Маршировочный
   - Призрачный
   - Пронзающий
   - Стеклянный
@@ -74,7 +74,7 @@
   id: MonoRemnantModifier
   values:
   # Ru-Locale-Start
-  - Адъюнкт
+  - Помощник
   - Соединение
   - Механизм
   - Провод
