--- a/Resources/Prototypes/_Mono/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/_Mono/Entities/Mobs/Player/silicon.yml
@@ -4,7 +4,7 @@
   # Ru-Locale-Start
   - Юнит Авангард
   - Миротворец
-  - Центинел
+  - Сентинел
   - Защитник Династии
   # Ru-Locale-End
 
@@ -49,7 +49,7 @@
   id: PDVCoreNameset
   values:
   # Ru-Locale-Start
-  - НADSмотрщик
+  - НАДСмотрщик
   - Позитроник
   - Обломок
   - Улей
