--- a/Resources/Prototypes/Entities/Structures/Storage/Closets/big_boxes.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Closets/big_boxes.yml
@@ -66,11 +66,11 @@
       damageModifierSet: FlimsyMetallic #Syndicate boxes should have a bit of protection
     - type: CardboardBox
       quiet: true
-    - type: Stealth
-      hadOutline: true
-    - type: StealthOnMove
-      passiveVisibilityRate: -0.37
-      movementVisibilityRate: 0.20
+#Exodus-RefactorStealthSystem-Begin
+      stealth:
+        passiveVisibilityRate: -0.37
+        movementVisibilityRate: 0.20
+#Exodus-RefactorStealthSystem-End
 
 - type: entity
   id: BigBox
