--- a/Resources/Prototypes/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Crates/crates.yml
@@ -665,8 +665,10 @@
   id: InvisibleCrate
   suffix: Stealth
   components:
-  - type: Stealth
-    hadOutline: true
-  - type: StealthOnMove
-    passiveVisibilityRate: -0.10
-    movementVisibilityRate: 0.10
+#Exodus-RefactorStealthSystem-Begin
+  - type: InstantStealth
+    stealth:
+      passiveVisibilityRate: -0.10
+      movementVisibilityRate: 0.10
+      hadOutline: true
+#Exodus-RefactorStealthSystem-End
